--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,19 +1,38 @@
 <section class="section hero">
   <h1 class="hero-title">ice cream made with passion</h1>
-  <div class="bottoms">
-    <ul class="about-ice-cream">
-      <li class="anchors">
-        <button class="btn">
-          <a href="#products">Products</a>
-        </button>
+  <div class="about-ice-cream">
+    <ul class="about-ice-cream_list">
+      <li class="about-ice-cream_anchor">
+        <a href="#products">Products</a>
       </li>
-      <li class="anchors">
-        <a href="#howItsMade">How it’s made?</a>
+      <li class="about-ice-cream_anchor">
+        <a href="#howItsMade">How it's made?</a>
       </li>
     </ul>
   </div>
-  <div class="text_with_arrow">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et
+  <div class="info-with-arrow">
+    <img class="info-with-arrow_img" 
+    src="./images/hero" alt="Many ice-cream on a plate" />
+    <p class="info-with-arrow_text">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et
+    </p>
+    <details>
+      <summary>toppings for ice cream</summary>
+      Choose a topping of your choice for a brighter taste
+    </details>
+  </div>
+  <div class="ownership">
+    <ul class="ownership_list">
+      <li class="ownership_item">
+        <p class="ownership-amaunt">16</p>
+        <p class="ownership-detail">cafes</p>
+      </li>
+
+      <li class="ownership_item">
+        <p class="ownership-amaunt">23</p>
+        <p class="ownership-detail">food trucks</p>
+      </li>
+    </ul>
   </div>
 </section>
