--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -12,9 +12,12 @@
     text-align: center;
     text-transform: uppercase;
     color: #FCFCFC;
+    margin-bottom: 12px;
 }
 
 .about__title {
+    display: block;
+    width: 210px;
     font-family: 'Seymour One';
     font-style: normal;
     font-weight: 400;
@@ -25,13 +28,34 @@
     text-transform: uppercase;
     
     color: #FCFCFC;
+    margin-bottom: 12px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+// .about__circle {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     position: absolute;
+
+//     content: "";
+//     width: 279px;
+//     height: 278px;
+    
+//     background-color: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+//     box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
+//     border-radius: 140px;
+// }
+
 .about__img {
+    position: relative;
     border-radius: 140px;
+    margin-bottom: 40px;
 }
 
 .about__descriptions {
+    width: 220px;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
@@ -41,9 +65,13 @@
     letter-spacing: 0.04em;
     
     color: #FCFCFC;
+    margin-bottom: 4px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .about__product {
+    width: 220px;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
@@ -52,7 +80,14 @@
     text-align: center;
     
     color: #FCFCFC;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+
+
+
 
 
 
