--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,18 +1,27 @@
-<section class="advanteges">
-  <h2 class="advanteges__title">advanteges</h2>
+<style> @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap'); </style>
+<section class="advantages">  
   <div class="conteiner">
-    <p class="advanteges__text">tradition and love</p>
-    <h2>how it’s made?</h2>
-    <div class="advanteges__image">
-      <img
-        srcset="./images/advantages/img_mobile.jpg 280w,
-        ./images/advantages/img_tab.jpg 330w,
-        ./images/advantages/img_desk.jpg 490w"
-        sizes="(min-width: 1200px) 490px, (min-width: 768px) 330px, (min-width: 480px) 280px, 100vw"
-          src="./images/advantages/img_mobile.jpg"
-          alt="picture of cow"          
-      />
-    </div>
+    <h2 class="advantages__title">advantages</h2>
+    <ul class="advantages__list">
+      <li class="advantages__item">
+        <div class="advantages__item__box cow">
+        <h3 class="advantages__item__title">721</h3>
+        <p class="advantages__item__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </div>
+      </li>
+      <li class="advantages__item">
+        <div class="advantages__item__box weight">
+        <h3 class="advantages__item__title">16kg</h3>
+        <p class="advantages__item__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+      </div>
+      </li>
+      <li class="advantages__item">
+        <div class="advantages__item__box icecrema">
+          <h3 class="advantages__item__title">84</h3>
+          <p class="advantages__item__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        </div>
+      </li>
+    </ul>
 
   </div>
 
