--- a/src/partials/button.html
+++ b/src/partials/button.html
@@ -1,3 +1,5 @@
-<button class="products-btn">Products</button>
-
-<button class="info-btn">Read more</button>
+<button class="btn__products">Products</button>
+<button class="btn__read-more">Read more</button>
+<button class="btn__our-locations">Our Locations</button>
+<button class="btn__franchise">Franchise</button>
+<button class="btn__buy-now">Buy now</button>
