--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,9 +1,8 @@
 @import './common';
 
-
-
 @import './container';
 @import './about';
 @import './reset';
 @import './vars';
 @import './body';
+@import './advantages';
