--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,5 +1,18 @@
 .gallery{
-    height: 300px;
-    width: 400px;
-    background: tomato;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.gallery__img{
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin: 0 auto;
+    @media screen and (min-width: 768px) {
+            max-width: 704px
+        }
+    @media screen and (min-width: 1200px) {
+        max-width: 1013px;
+    }
+
 }
