--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -7,6 +7,10 @@
         width: 279px;
     }
 
+    @media screen and (min-width: 480px) {
+        width: 100%;
+    }
+
     @media screen and (min-width: 768px) {
         width: 704px;
     }
