--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,19 +1,20 @@
 <section class="section hero">
-  <h1 class="hero-title">ice cream made with passion</h1>
+  <div class="hero_section"> 
+    <h1 class="hero-title">ice cream made with passion</h1>
   <div class="about-ice-cream">
-    <ul class="about-ice-cream_list">
-      <li class="about-ice-cream_anchor">
-        <a href="#products">Products</a>
+    <ul class="about-ice-cream__list list">
+      <li class="about-ice-cream__anchor">
+        <a class="about-ice-cream__link link" href="#products">Products</a>
       </li>
-      <li class="about-ice-cream_anchor">
-        <a href="#howItsMade">How it's made?</a>
+      <li class="about-ice-cream__anchor">
+        <a class="about-ice-cream__link link" href="#advantages">How it's made?</a>
       </li>
     </ul>
   </div>
   <div class="info-with-arrow">
-    <img class="info-with-arrow_img" 
+    <img class="info-with-arrow__img" 
     src="./images/hero" alt="Many ice-cream on a plate" />
-    <p class="info-with-arrow_text">
+    <p class="info-with-arrow__text">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et
     </p>
@@ -23,16 +24,17 @@
     </details>
   </div>
   <div class="ownership">
-    <ul class="ownership_list">
-      <li class="ownership_item">
-        <p class="ownership-amaunt">16</p>
-        <p class="ownership-detail">cafes</p>
+    <ul class="ownership__list">
+      <li class="ownership__item">
+        <p class="ownership__amaunt">16</p>
+        <p class="ownership__detail">cafes</p>
       </li>
 
-      <li class="ownership_item">
-        <p class="ownership-amaunt">23</p>
-        <p class="ownership-detail">food trucks</p>
+      <li class="ownership__item">
+        <p class="ownership__amaunt">23</p>
+        <p class="ownership__detail">food trucks</p>
       </li>
     </ul>
   </div>
+</div>
 </section>
