--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,9 +1,9 @@
 <header class="header">
     <div class="header__container ">
         <nav class="nav">
-            <a href="">
+            <!-- <a href="">
                 <img src="" alt="">
-            </a>
+            </a> -->
             <ul class="nav__list">
                 <li class="nav__item">
                     <a href="" class="nav__link ">Home</a>
