--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -33,7 +33,7 @@
           </p>
           <p class="about__choice">This is enough to choose ice cream and coffee for any mood!</p>
           <button class="about__btn-read-more" type="button" data-modal-open>Read more
-            <svg class="about__icon" width="12px" height="12px">
+            <svg class="about__icon-btn" width="12px" height="12px">
               <use href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
             </svg>
           </button>
