--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,25 +1,25 @@
 <style> @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap'); </style>
 <section class="advantages">  
-  <div class="container">
+  <div class="container container__advantages">
     <h2 class="advantages__title">advantages</h2>
     <ul class="advantages__list">
-      <li class="advantages__item">
-        <div class="advantages__item__box cow">
+      <li class="advantages__item cow">
+        
         <h3 class="advantages__item__title">721</h3>
         <p class="advantages__item__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-      </div>
+      
       </li>
-      <li class="advantages__item">
-        <div class="advantages__item__box weight">
+      <li class="advantages__item weight">
+        
         <h3 class="advantages__item__title">16kg</h3>
         <p class="advantages__item__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-      </div>
+      
       </li>
-      <li class="advantages__item">
-        <div class="advantages__item__box icecrema">
+      <li class="advantages__item icecrema">
+        
           <h3 class="advantages__item__title">84</h3>
           <p class="advantages__item__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-        </div>
+        
       </li>
     </ul>
   </div>
