--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -30,10 +30,7 @@
   }
 }
 
-.about__btn-read-more {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
+.btn__read-more {
   width: 164px;
   height: 42px;
   background: #f8d24e;
