--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -115,6 +115,7 @@ background-color: var(--brand-green);
   background-image: url(../images/advantages/icecrema1x.png);
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx){
     background-image: url(../images/advantages/icecrema2x.png);
+    background-size: contain;
   }
 }
 
