--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,3 +1,14 @@
+.link {
+    text-decoration: none;
+    color: currentColor;
+  }
+
+  .header__container {
+    display: flex;
+  }
+
+
+
 
 .header__container {
     display: flex;
