--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,21 +4,21 @@
             <!-- <a href="">
                 <img src="" alt="">
             </a> -->
-            <ul class="nav__list">
+            <ul class="nav__list list">
                 <li class="nav__item">
-                    <a href="" class="nav__link ">Home</a>
+                    <a href="" class="nav__link link">Home</a>
                 </li>
                 <li class="nav__item">
-                    <a href="" class="nav__link ">How it’s made?</a>
+                    <a href="" class="nav__link link">How it’s made?</a>
                 </li>
                 <li class="nav__item">
-                    <a href="" class="nav__link ">Our products</a>
+                    <a href="" class="nav__link link">Our products</a>
                 </li>
                 <li class="nav__item">
-                    <a href="" class="nav__link ">Contact</a>
+                    <a href="" class="nav__link link">Contact</a>
                 </li>
             </ul>
-            <button class="header__btn" type="button" data-modal-open>Buy now</button>
+            <button class="btn__buy-now" type="button" data-modal-open>Buy now</button>
         </nav>
     </div>
 </header>
