--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -21,8 +21,65 @@
   margin: -1px;
 }
 
+.contacts {
+  background-color: #84a178;
+  padding: 0 20px 60px;
+
+  @media screen and (min-width: 768px) {
+    padding: 0 32px 60px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 0 16px 60px;
+  }
+}
+
+.contacts__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    gap: 16px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    gap: 32px;
+  }
+
+  margin-bottom: 20px;
+}
+
+.contacts__item {
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 16px;
+    }
+  }
+
+  max-width: 280px;
+
+  background: #fcfcfc;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+
+  @media screen and (min-width: 768px) {
+    max-width: 224px;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 368px;
+  }
+}
+
 .category {
   padding: 40px 32px 24px;
+
+  @media screen and (min-width: 768px) {
+    padding: 40px 41px 24px;
+  }
 }
 
 .category__title {
@@ -43,22 +100,6 @@
   letter-spacing: 0.04em;
 
   color: #131313;
-}
-
-.contacts__list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 16px;
-  align-items: center;
-}
-
-.contacts__item {
-  max-width: 280px;
-  margin: 0 auto;
-
-  background: #fcfcfc;
-  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
-  border-radius: 24px;
 }
 
 .category__item:not(:last-child) {
@@ -115,10 +156,59 @@
   font-weight: 500;
   font-size: 12px;
   line-height: calc(19 / 12);
-
-  color: #131313;
 }
 
 .category-contacts__link--phone {
+  color: #131313;
   margin-bottom: 6px;
+}
+
+.category-contacts__link--mail {
+  color: #131313;
+}
+
+.btn__list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.btn__item {
+  margin: 0 auto;
+}
+
+.btn__our-locations {
+  width: 196px;
+  height: 42px;
+  background: #f8d24e;
+  border-radius: 10px;
+  border: none;
+  color: black;
+  &:hover {
+    background: #0a8817;
+  }
+  &:focus {
+    background: #0a8817;
+
+    color: #fff;
+    outline: transparent;
+  }
+}
+.btn__franchise {
+  width: 196px;
+  height: 42px;
+  background-color: transparent;
+  border: 2px solid #f8d24e;
+  border-radius: 8px;
+
+  cursor: pointer;
+
+  &:hover {
+    border: 2px solid #0a8817;
+  }
+
+  &:focus {
+    border: 2px solid #0a8817;
+    color: #fff;
+  }
 }
