--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -111,7 +111,14 @@
       </div>
     </li>
   </ul>
-
+  <ul class="btn__list list">
+    <li class="btn__item">
+      <button class="btn__our-locations">Our Locations</button>
+    </li>
+    <li class="btn__item">
+      <button class="btn__franchise">Franchise</button>
+    </li>
+  </ul>
 
 
 </section>
