--- a/src/sass/_container.scss
+++ b/src/sass/_container.scss
@@ -3,12 +3,17 @@
     margin-right: auto;
     outline: 1px solid tomato;
 
-    @media screen and (min-width: 320px) {
-        width: 279px;
-    }
+  
+        width: 100%;
+        @media screen and (max-width: 479px){
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+
+
 
     @media screen and (min-width: 480px) {
-        width: 100%;
+        width: 440px;
     }
 
     @media screen and (min-width: 768px) {
