--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,42 +1,49 @@
- <!-- About Зозуля Елена -->
+<!-- About Зозуля Елена -->
 <section class="about">
   <div class="about__container container">
     <p class="about__uppertitle">tradition and love</p>
     <h2 class="about__title">how it’s made?</h2>
     <div class="about__desc">
       <div>
-        <img class="about__img" 
-        srcset="
-                .\images\about\cow_sm@1x.jpg 279w,
-                .\images\about\cow_md@1x.jpg 330w,
-                .\images\about\cow_lg@1x.jpg 490w,
-                .\images\about\cow_sm@2x.jpg 558w,
-                .\images\about\cow_md@2x.jpg 660w,
-                .\images\about\cow_lg@2x.jpg 980w
-                " 
-                sizes="(min-width: 1200px) 490px,
+        <img
+          class="about__img"
+          srcset="
+            .\images\about\cow_sm@1x.jpg 279w,
+            .\images\about\cow_md@1x.jpg 330w,
+            .\images\about\cow_lg@1x.jpg 490w,
+            .\images\about\cow_sm@2x.jpg 558w,
+            .\images\about\cow_md@2x.jpg 660w,
+            .\images\about\cow_lg@2x.jpg 980w
+          "
+          sizes="(min-width: 1200px) 490px,
                         (min-width: 768px) 330px,
-                        (min-width: 480px) 279px, 100vw" 
-                alt="cow"
-                src=".\images\about\cow_sm@1x.jpg"
-                loading="lazy" />
+                        (min-width: 480px) 279px, 100vw"
+          alt="cow"
+          src=".\images\about\cow_sm@1x.jpg"
+          loading="lazy"
+        />
       </div>
       <div class="about__text-right">
-          <p class="about__descriptions">Ice is a place where you will become not only a little happier, but also healthier.
-            Health is the main value for us, and
-            we follow it when creating our handmade desserts.</p>
-          <p class="about__product">We use traditional recipes and 100% natural ingredients. Our products are so natural
-            that
-            they can be given to children
-            from the age of three years. Sweets lovers can expect 55 types of ice cream, 15 types of coffee and 23
-            milkshakes.
-          </p>
-          <p class="about__choice">This is enough to choose ice cream and coffee for any mood!</p>
-          <button class="about__btn-read-more" type="button" data-modal-open>Read more
-            <svg class="about__icon-btn" width="12px" height="12px">
-              <use href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
-            </svg>
-          </button>
+        <p class="about__descriptions">
+          Ice is a place where you will become not only a little happier, but
+          also healthier. Health is the main value for us, and we follow it when
+          creating our handmade desserts.
+        </p>
+        <p class="about__product">
+          We use traditional recipes and 100% natural ingredients. Our products
+          are so natural that they can be given to children from the age of
+          three years. Sweets lovers can expect 55 types of ice cream, 15 types
+          of coffee and 23 milkshakes.
+        </p>
+        <p class="about__choice">
+          This is enough to choose ice cream and coffee for any mood!
+        </p>
+        <button class="btn__read-more" type="button" data-modal-open>
+          Read more
+          <svg class="about__icon-btn" width="12px" height="12px">
+            <use href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
+          </svg>
+        </button>
       </div>
     </div>
   </div>
