--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -54,12 +54,12 @@
 
 .contacts__item {
   @media screen and (max-width: 767px) {
+    max-width: 280px;
+
     &:not(:last-child) {
       margin-bottom: 16px;
     }
   }
-
-  max-width: 280px;
 
   background: #fcfcfc;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
@@ -67,10 +67,12 @@
 
   @media screen and (min-width: 768px) {
     max-width: 224px;
+    height: 537px;
   }
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     max-width: 368px;
+    height: 542px;
   }
 }
 
