--- a/src/partials/button.html
+++ b/src/partials/button.html
@@ -5,25 +5,25 @@
 <button class="btn__read-more">
   <p class="btn__content">Read more</p>
   <svg class="svg-icon" width="12" height="12">
-    <use xlink:href="../images/svg/symbol-defs.svg#icon-right-bold"></use>
+    <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
   </svg>
 </button>
 
 <button class="btn__our-locations">
   <p class="btn__content">Our Locations</p>
   <svg class="svg-icon" width="12" height="12">
-    <use xlink:href="../images/svg/symbol-defs.svg#icon-right-bold"></use>
+    <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
   </svg>
 </button>
 <button class="btn__franchise">
   <p class="btn__content">Franchise</p>
   <svg class="svg-icon" width="12" height="12">
-    <use xlink:href="../images/svg/symbol-defs.svg#icon-right-bold"></use>
+    <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
   </svg>
 </button>
 <button class="btn__buy-now">
   <p class="btn__content">Buy now</p>
   <svg class="svg-icon" width="12" height="12">
-    <use xlink:href="../images/svg/symbol-defs.svg#icon-right-bold"></use>
+    <use xlink:href="./images/svg/symbol-defs.svg#icon-right-bold"></use>
   </svg>
 </button>
