Статичні кнопки в слайдері

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -16,7 +16,6 @@
             atmosphere and polite staff.
           </div>
           <h2 class="swiper__title">Emily, Los Angeles</h2>
-          <div class="swiper-pagination"></div>
         </li>
         <li class="swiper-slide">
           <img
@@ -29,7 +28,6 @@
             love your ice cream and casual atmosphere!
           </div>
           <h2 class="swiper__title">Bryan, New-York</h2>
-          <div class="swiper-pagination"></div>
         </li>
         <li class="swiper-slide">
           <img
@@ -43,10 +41,29 @@
             quickly!
           </div>
           <h2 class="swiper__title">Diana, Chicago</h2>
-          <div class="swiper-pagination"></div>
+        </li>
+        <li class="swiper-slide">
+          <img
+            class="swiper__image"
+            src="./images/customer-reviews/review3@1x.jpg"
+            srcset="./images/customer-reviews/review3@2x.jpg 2x"
+          />
+          <div class="swiper__text">
+            Ice cream is my passion! I love your chocolate hazelnut ice cream!
+            And I really like the excellent service - always served politely and
+            quickly!
+          </div>
+          <h2 class="swiper__title">Diana, Chicago</h2>
         </li>
       </ul>
+      <div class="bullets-container"><div class="swiper-pagination"></div></div>
+
       <div class="swiper-button-next"></div>
+      <div class="swiper__nav">
+        <div class="swiper__bullet"></div>
+        <div class="swiper__bullet"></div>
+        <div class="swiper__bullet"></div>
+      </div>
     </div>
   </div>
 </section>
