Динамічні кнопки в слайдері відгуків
Варіант динамічних кнопок

--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -59,11 +59,11 @@
       <div class="bullets-container"><div class="swiper-pagination"></div></div>
 
       <div class="swiper-button-next"></div>
-      <div class="swiper__nav">
+      <!-- <div class="swiper__nav">
         <div class="swiper__bullet"></div>
         <div class="swiper__bullet"></div>
         <div class="swiper__bullet"></div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
