--- a/src/sass/_customer-reviews.scss
+++ b/src/sass/_customer-reviews.scss
@@ -118,27 +118,27 @@
 .swiper-button-prev:hover {
   color: var(--brand-yellow);
 }
-.swiper-pagination-bullets {
-  display: none;
-}
-.swiper__nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 18px;
-  margin-top: 12px;
-}
-.swiper__bullet {
-  width: 12px;
-  height: 12px;
-  background-color: var(--brand-green);
-  border-radius: 50px;
-
-  &:not(:first-child){
-    background-color: #D9D9D9;
-  }
-}
-
-// .swiper-pagination {
-//   position: relative;
+// .swiper-pagination-bullets {
+//   display: none;
 // }
+// .swiper__nav {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   gap: 18px;
+//   margin-top: 12px;
+// }
+// .swiper__bullet {
+//   width: 12px;
+//   height: 12px;
+//   background-color: var(--brand-green);
+//   border-radius: 50px;
+
+//   &:not(:first-child){
+//     background-color: #D9D9D9;
+//   }
+// }
+
+.swiper-pagination {
+  position: relative;
+}
