--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -3,5 +3,6 @@
 	--brand-yellow: #F8D24E;
 	--brand-black: #131313;
 	--brand-white: #FCFCFC;
+	--brand-brown: #D6936D;
 	--transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
