--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,40 +1,42 @@
 <!-- Products Уточкіна Катерина -->
 <section class="products">
     <div class="products__container container">
-        <p class="products__uppertitle">100% natural</p>
+        <p class="products__lable">100% natural</p>
         <h2 class="products__title">Products</h2>
-        <div>
-            <ul class="products-list">
-                <li class="products-item">
+            <ul class="products__list">
+                <li class="products__item products__item--cream">
+                    <div class="products__item--green"></div>
                     <h3 class="products__name">ice cream</h3>
-                    <p class="products__desc">
+                    <p class="products__text products__text--cream">
                         Soft ice cream with a delicate taste. Made with milk, cream, sugar and
                         natural stabilizer
                     </p>
                 </li>
             </ul>
-        </div>
-        <div>
-            <ul>
-                <li class="products__desc">
+        
+        
+            <ul class="products__list">
+                <li class="products__item products__item--coffee">
+                    <div class="products__item--yellow"></div>
                     <h3 class="products__name">ice coffee</h3>
-                    <p>
+                    <p class="products__text products__text--coffee">
                         Fragrant invigorating drink created from 100% natural ingredients
                         without the use of preservatives and flavor enhancers
                     </p>
                 </li>
             </ul>
-        </div>
-        <div>
-            <ul>
-                <li class="products__desc">
+       
+       
+            <ul class="products__list">
+                <li class="products__item products__item--milkshakes">
+                    <div class="products__item--brown"></div>
                     <h3 class="products__name">milkshakes</h3>
-                    <p>
+                    <p class="products__text products__text--milkshakes">
                         Sweet drinks based on milk and ice cream, supplemented with syrups,
                         fruits, berries and other sweets of your choice
                     </p>
                 </li>
             </ul>
-        </div>
+       
     </div>
 </section>
